# xlex

./: Cargo.toml  README.md
xlex-lexer/: Cargo.toml
xlex-lexer/benches/: lexer_inline.rs  lexer_stream.rs
xlex-lexer/src/lexer/: classifier.rs  config.rs  inline.rs  mod.rs  stream.rs  token.rs
